--- a/Sleep Pal/Base.lproj/Main.storyboard
+++ b/Sleep Pal/Base.lproj/Main.storyboard
@@ -1,49 +1,106 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7525" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CUh-Yd-BPx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="CUh-Yd-BPx">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7516"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Table View Controller-->
+        <scene sceneID="ykz-Qa-oVf">
+            <objects>
+                <tableViewController id="l6u-Rx-2xP" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="113" sectionHeaderHeight="22" sectionFooterHeight="22" id="bQP-O1-y2m">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="113" id="r4M-8x-ntZ">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r4M-8x-ntZ" id="gbF-27-aFc">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="l6u-Rx-2xP" id="dFl-Vj-vlY"/>
+                            <outlet property="delegate" destination="l6u-Rx-2xP" id="qMH-rL-1A7"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="WHK-MI-fk6"/>
+                    <connections>
+                        <segue destination="cMy-wI-Lhx" kind="show" identifier="entryDetail" id="BIv-Nx-q9v"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cx1-6x-laT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1152" y="-370"/>
+        </scene>
         <!--View Controller-->
+        <scene sceneID="4Ll-Hj-vY3">
+            <objects>
+                <viewController id="cMy-wI-Lhx" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Jyk-PI-u7n"/>
+                        <viewControllerLayoutGuide type="bottom" id="pq8-nm-Iha"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="y2M-Q4-7aa">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dal-g5-haR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1952" y="-370"/>
+        </scene>
+        <!--Record Sleep View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="Sleep_Pal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="RecordSleepViewController" customModule="Sleep_Pal" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sleep Pal" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fMG-Wo-TBh">
-                                <rect key="frame" x="206" y="66" width="188" height="71"/>
-                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="46"/>
+                                <rect key="frame" x="188" y="66" width="225" height="85"/>
+                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="55"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ready to sleep? Press start to begin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Buz-I3-Vbc">
-                                <rect key="frame" x="168" y="248" width="264" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Ready to sleep? Press start to begin" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Buz-I3-Vbc">
+                                <rect key="frame" x="168" y="249" width="264" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y99-Ug-rpo">
                                 <rect key="frame" x="16" y="457" width="568" height="48"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.29530123427642996" green="0.77647058820000003" blue="0.24614662731244907" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="START">
-                                    <color key="titleColor" red="0.1450980392" green="0.1450980392" blue="0.64360015386165403" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.89953590549348228" green="0.89953590549348228" blue="0.89953590549348228" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="startPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="myw-x4-prY"/>
+                                </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.34901960780000002" green="0.2901960784" blue="0.63529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.19776288587674576" green="0.23603297172848964" blue="0.42025018404315972" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="Buz-I3-Vbc" firstAttribute="top" secondItem="fMG-Wo-TBh" secondAttribute="bottom" constant="111" id="H4S-IJ-PLV"/>
                             <constraint firstItem="Y99-Ug-rpo" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="JKZ-xE-Uo6"/>
                             <constraint firstItem="fMG-Wo-TBh" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="46" id="NMP-XS-j3s"/>
+                            <constraint firstAttribute="centerY" secondItem="Buz-I3-Vbc" secondAttribute="centerY" constant="42" id="c7N-zd-8ly"/>
                             <constraint firstItem="Y99-Ug-rpo" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="dxw-qV-hNV"/>
                             <constraint firstAttribute="centerX" secondItem="Buz-I3-Vbc" secondAttribute="centerX" id="mnM-Dv-j72"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Y99-Ug-rpo" secondAttribute="bottom" constant="46" id="oNL-1H-CWA"/>
@@ -52,6 +109,11 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="history" id="aNP-Rt-6im"/>
+                    <connections>
+                        <outlet property="instructionsLabel" destination="Buz-I3-Vbc" id="WEv-Xk-Dtb"/>
+                        <outlet property="logoLabel" destination="fMG-Wo-TBh" id="6Hr-Cc-vtY"/>
+                        <outlet property="startButton" destination="Y99-Ug-rpo" id="8dq-Yk-fYN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
@@ -66,7 +128,7 @@
                         <viewControllerLayoutGuide type="bottom" id="eOj-Ds-7xJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ra5-yn-l4h">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -76,38 +138,19 @@
             </objects>
             <point key="canvasLocation" x="1152" y="1122"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="qvS-RG-AwE">
-            <objects>
-                <viewController id="mbf-Fs-ZaX" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="FNj-SK-AaZ"/>
-                        <viewControllerLayoutGuide type="bottom" id="Mac-V4-Wk2"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="TLT-wb-yTM">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="aFR-5T-O1Z"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eD6-91-J0D" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1152" y="-379"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="buZ-ab-1MF">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="CUh-Yd-BPx" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="D01-JL-neK">
+                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="D01-JL-neK">
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.0" green="0.0" blue="0.24680397727272727" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="vXZ-lx-hvc" kind="relationship" relationship="viewControllers" id="ywx-Sk-r8T"/>
-                        <segue destination="mbf-Fs-ZaX" kind="relationship" relationship="viewControllers" id="frA-1M-DlV"/>
+                        <segue destination="l6u-Rx-2xP" kind="relationship" relationship="viewControllers" id="hAM-lS-Uqx"/>
                         <segue destination="lNA-N2-2Jl" kind="relationship" relationship="viewControllers" id="osc-T6-hX6"/>
                     </connections>
                 </tabBarController>
